# CPP_Template_VSCode_GCC_CMake

./: CMakeCommands.txt  CMakeLists.txt  README.md
Source/src/: main.cpp
